syntax = "proto3";
package com.cs301.shared;

option java_package = "com.cs301.shared.protobuf";
option java_multiple_files = true;

message C2C {
  string agent_id = 1;
  string client_id = 2;
  string client_email = 3;
  string crud_type = 4;
  CRUDInfo crud_info = 5;
}

message CRUDInfo {
  string attribute = 1;
  string before_value = 2;
  string after_value = 3;
}
